# meteors

./: .codecov.yaml  .gitignore  .pre-commit-config.yaml  .prettierignore  CITATION.cff  LICENSE  README.md  changelog.md  code_of_conduct.md  commit_processor.py  lime.ipynb  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  versions.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  lint.yml  pr.yml  python-package.yml  release.yml  test.yml
0.0.2/: 404.html  index.html  objects.inv
0.0.2/changelog/: index.html
0.0.2/how-to-guides/: index.html
0.0.2/quickstart/: index.html
0.0.2/reference/: index.html
0.0.2/search/: search_index.json
0.0.2/tutorials/lime/: index.html
0.1.1/: 404.html  index.html  objects.inv  sitemap.xml
0.1.1/changelog/: index.html
0.1.1/how-to-guides/: index.html
0.1.1/quickstart/: index.html
0.1.1/reference/: index.html
0.1.1/search/: search_index.json
0.1.1/tutorials/attr_showcase/: index.html
0.1.1/tutorials/introduction/: index.html
0.1.1/tutorials/lime/: index.html
0.1.1/tutorials/segmentation/: index.html
0.1.2/: 404.html  index.html  sitemap.xml
0.1.2/changelog/: index.html
0.1.2/how-to-guides/: index.html
0.1.2/quickstart/: index.html
0.1.2/reference/: index.html
0.1.2/search/: search_index.json
0.1.2/tutorials/attr_showcase/: index.html
0.1.2/tutorials/introduction/: index.html
0.1.2/tutorials/lime/: index.html
0.1.2/tutorials/segmentation/: index.html
0.2.0/: 404.html  index.html  objects.inv  sitemap.xml
0.2.0/changelog/: index.html
0.2.0/how-to-guides/: index.html
0.2.0/quickstart/: index.html
0.2.0/reference/: index.html
0.2.0/search/: search_index.json
0.2.0/stylesheets/: extra.css
0.2.0/tutorials/attr_showcase/: index.html
0.2.0/tutorials/introduction/: index.html
0.2.0/tutorials/lime/: index.html
0.2.0/tutorials/segmentation/: index.html
docs/: how-to-guides.md  index.md  quickstart.md  reference.md
docs/stylesheets/: extra.css
docs/tutorials/: introduction.md
examples/: lime.ipynb  requirements.txt
examples/clip/: __init__.py  clip.py  clip_data_loader.py  clip_dataset.py  downstream_task.py  headers.py  hyperview_data_loader.py  losses.py  model.py  simple_tokenizer.py  utils.py
examples/data/: 0.npz  1.npz  2.npz
examples/hyperview_challenge/: attr_showcase.ipynb  clip_model.py  clip_utils.py  eagleeyes.py  lime.ipynb  shap.ipynb
examples/hyperview_challenge/data/: 2.npz  3.npz  4.npz  5.npz  6.npz  7.npz  8.npz  9.npz  train_gt.csv  wavelenghts.txt
examples/lime/: attribution_methods.ipynb  clip_model.py  lime.ipynb  lime.md  segmentation.ipynb
examples/lime/cloudsen12_models/: cloudsen12.py
examples/segmentation/: segmentation.ipynb
examples/segmentation/cloudsen12_models/: cloudsen12.py  utils_torch.py
examples/segmentation/data/: wavelenghts.txt
examples/shap/: shap.ipynb
latest/: 404.html  index.html  objects.inv
latest/changelog/: index.html
latest/how-to-guides/: index.html
latest/quickstart/: index.html
latest/reference/: index.html
latest/search/: search_index.json
latest/tutorials/attr_showcase/: index.html
latest/tutorials/introduction/: index.html
latest/tutorials/lime/: index.html
latest/tutorials/segmentation/: index.html
src/HyperXAI/: __init__.py  hyper_image.py  hyper_lime.py  lime_base.py
src/HyperXAI/utils/models/: __init__.py  models.py
src/HyperXAI/visualise/: lime_visualise.py
src/meteors/: __init__.py  exceptions.py  hsi.py  hyper_noise_tunnel.py  image.py  lime.py  lime_base.py  utils.py
src/meteors/attr/: __init__.py  attributes.py  explainer.py  hyper_noise_tunnel.py  input_x_gradients.py  integrated_gradients.py  lime.py  lime_base.py  noise_tunnel.py  occlusion.py  saliency.py
src/meteors/exceptions/: __init__.py  base.py  exceptions.py  shapes.py
src/meteors/models/: __init__.py  abstract.py  linear.py
src/meteors/shap/: __init__.py  explainer.py  explanation.py  shap.py
src/meteors/utils/: __init__.py  utils.py
src/meteors/utils/models/: __init__.py  models.py
src/meteors/visualise/: __init__.py  lime_visualise.py
src/meteors/visualize/: __init__.py  attr_visualize.py  hsi_visualize.py  image_visualize.py  lime_visualize.py  shap_visualize.py
src/meteors/visualize/shap/: __init__.py  plots.py
tests/: test_attr_visualize.py  test_attribution_methods.py  test_band_mask.py  test_commit_processor.py  test_hsi.py  test_hsi_attributes.py  test_hyper_noise_tunnel.py  test_image.py  test_image_attributes.py  test_image_visualize.py  test_integrated_gradients.py  test_lime.py  test_lime_visualise.py  test_lime_visualize.py  test_models.py  test_utils.py
tests/attr/: test_attributes.py  test_attribution_methods.py  test_explainer.py  test_hsi_attributes.py  test_hyper_noise_tunnel.py  test_lime.py  test_noise_tunnel.py
tests/models/: test_models.py
tests/shap/: test_shap.py  test_shap_explainer.py  test_shap_explanation.py
tests/utils/models/: test_models.py
tests/utils/utils/: test_utils.py
tests/visualize/: test_attr_visualize.py  test_hsi_visualize.py  test_lime_visualize.py  test_shap_visualize.py
