[project]
name = "meteors"
version = "0.0.2"
authors = [
  { name="Tymoteusz Kwiecinski", email="tymoteuszkwiecinski@gmail.com" },
]
description = "Explanations of models for Hyperspectral data"
readme = "README.md"
requires-python = ">=3.9"

classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
    "captum>=0.7.0",
    "spyndex>=0.6.0",
    "torch",
    "numpy",
    "setuptools",
    "eval-type-backport",
    "importlib-resources",
    "loguru",
    "matplotlib",
    "seaborn",
    "pandas",
    "pydantic",
    "scikit-image",
    "scikit-learn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pre-commit>=3.7.1",
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "tomli>=2.0.1",
    "codespell>=2.3.0",
]

[tool.mypy]
ignore_missing_imports = true
files = ["src"]
plugins = [
  "pydantic.mypy"
]

[tool.ruff]
line-length = 120
extend-include = ["*.ipynb"]

[tool.pytest.ini_options]
addopts = "--cov=src/meteors --cov-report=xml"

[tool.ruff.format]
docstring-code-format = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/meteors"]

[project.urls]
Homepage = "https://github.com/xai4space/meteors/"
